[package]
name = "tm"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
dirs-next = "2.0.0"
termion = "1"
